--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
             <div class="front-container">
                 
                 <div class="column-left">
-                    <img src="Images/lemon-1.png" alt="" class="lemon-1">
-                    <img src="Images/lemon-2.png" alt="" class="lemon-2">
-                    <img src="Images/lemon-3.png" alt="" class="lemon-3">
-                    <img src="Images/lemon-4.png" alt="" class="lemon-4">
-
-                    <h1 id = "hd">FIND THE BEST RESTAURANTS IN YOUR AREA</h1>
+                    <img src="lemon-1.png" alt="" class="lemon-1">
+                    <img src="lemon-2.png" alt="" class="lemon-2">
+                    <img src="lemon-3.png" alt="" class="lemon-3">
+                    <img src="lemon-4.png" alt="" class="lemon-4              <h1 id = "hd">FIND THE BEST RESTAURANTS IN YOUR AREA</h1>
                     <P>Enjoy the finest Cuisines <br> with MENTO</P>
                     <a href="mento-login.html">
                         <button class = "register" id = "btn">LOG IN</button>
@@ -66,11 +64,11 @@
     <section>
     <div class="mid">
        <div class="mid-sides">
-        <img src="Images/find-r.png" alt="">
+        <img src="find-r.png" alt="">
         <h1>Discover restaurants</h1>
        </div>
        <div class="mid-sides">
-        <img src="Images/food.png" alt="">
+        <img src="food.png" alt="">
         <h1>Order & Book</h1>
        </div>
 
