--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav id="navigation">
             <div class="logo">
-                <img src="Images/MENTO.png" alt="">
+                <img src="/Images/MENTO.png" alt="">
             </div>
             
                 <div class="nav-items" id="menuitems">
